--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">fileManager</string>
-    <string name="cantreadfolder">Cannot read folder due to permissions</string>
-
+    <string name="cant_read_folder">Cannot read folder due to permissions</string>
+    <string name="permission_is_not_granted">Permission is not granted</string>
+    <string name="allow_permission">Please allow permissions</string>
 </resources>
