--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="cant_read_folder">Cannot read folder due to permissions</string>
     <string name="permission_is_not_granted">Permission is not granted</string>
     <string name="allow_permission">Please allow permissions</string>
+    <string name="cantopenfile">Cannot open this file</string>
 </resources>
