--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="permission_is_not_granted">Permission is not granted</string>
     <string name="allow_permission">Please allow permissions</string>
     <string name="cantopenfile">Cannot open this file</string>
+    <string name="exception_OnArticleSelectedListener">must implement OnArticleSelectedListener</string>
 </resources>
